[gd_scene load_steps=2 format=3 uid="uid://j47k0x3l6342"]

[ext_resource type="Script" uid="uid://duepqvpwheas5" path="res://scripts/ui/statistics_ui.gd" id="1_eows0"]

[node name="StatisticsUI" type="CanvasLayer"]
script = ExtResource("1_eows0")

[node name="StatsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="StatsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08235294, 0.79607844, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="StatsMenu/ColorRect"]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameChooser" type="OptionButton" parent="StatsMenu/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="TopStats" type="VBoxContainer" parent="StatsMenu/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="TimestampLabel" type="Label" parent="StatsMenu/ColorRect/VBoxContainer/TopStats"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="StatsMenu/ColorRect/VBoxContainer/TopStats"]
layout_mode = 2

[node name="PlayTimeLabel" type="Label" parent="StatsMenu/ColorRect/VBoxContainer/TopStats"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="StatsMenu/ColorRect/VBoxContainer/TopStats"]
layout_mode = 2

[node name="BottomStats" type="VBoxContainer" parent="StatsMenu/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HitRatesLabel" type="Label" parent="StatsMenu/ColorRect/VBoxContainer/BottomStats"]
layout_mode = 2
text = "Hit rates:"

[node name="HitRatesBox" type="HBoxContainer" parent="StatsMenu/ColorRect/VBoxContainer/BottomStats"]
layout_mode = 2

[node name="Label" type="Label" parent="StatsMenu/ColorRect/VBoxContainer/BottomStats/HitRatesBox"]
layout_mode = 2
text = "You have not played any games yet
"

[node name="HitTimesLabel" type="Label" parent="StatsMenu/ColorRect/VBoxContainer/BottomStats"]
layout_mode = 2
text = "Average time per hit:"

[node name="HitTimesBox" type="HBoxContainer" parent="StatsMenu/ColorRect/VBoxContainer/BottomStats"]
layout_mode = 2

[node name="BackButton" type="Button" parent="StatsMenu/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="StatsMenu/ColorRect/VBoxContainer/GameChooser" to="." method="_on_game_chooser_item_selected"]
